--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>react-transform-upgrade-test</title>
+    <title>React Transform Upgrade Test</title>
   </head>
   <body>
     <section id="app"></section>
   </body>
-  <script src="bundle.js"></script>
+  <script src="/static/bundle.js"></script>
 </html>
